--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=1IHSDev
+author=Ian Harcourt-Smith
+description=A plugin I used for testing with multiple features
+tags=test,dev,random
+plugins=com.ihsdev.IHSDevPlugin
