Config setup better, button for triggering someting, world service used for world select, events tried

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,9 +26,8 @@
             "vmArgs": [
                 "-ea"
             ],
-            "args": [
-                "--developer-mode"
-            ]
+            "args": "--developer-mode"
+            //"args": "--developer-mode --debug"
         }
     ]
 }
