InfoPanel added with images

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,6 +27,7 @@
                 "-ea"
             ],
             "args": "--developer-mode"
+            //"args": "--developer-mode --safe-mode"
             //"args": "--developer-mode --debug"
         }
     ]
